src/objects/X2nd_PM__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss__c</fullName>
        <label>Loss %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>2nd PM</relationshipLabel>
        <relationshipName>X2nd_PM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X2nd_PM_Type__c</fullName>
        <label>2nd PM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSC</fullName>
                </value>
                <value>
                    <fullName>TRAY &amp; LID</fullName>
                </value>
                <value>
                    <fullName>TRAY ONLY</fullName>
                </value>
                <value>
                    <fullName>PRE CUT RSC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>2nd PM</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>2nd PM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>2nd PM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>